<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoader"
        android:visibility="visible"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlHome"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/black_shade_1"
            android:contentDescription="@string/bckDesc"
            android:id="@+id/ivBlack"/>

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:textSize="23sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llEdt"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:layout_below="@+id/tvCityName"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tilCityName"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/text_input_hint"
                android:padding="5dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tiEditCityName"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/ivSearch"
                android:layout_margin="10dp"
                android:contentDescription="@string/search_icon"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTemperature"
            android:layout_below="@+id/llEdt"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/temp_degrees"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivIcon"
            android:contentDescription="@string/weather_condition_icon"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvTemperature"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCondition"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/condition"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_below="@+id/ivIcon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tvWeatherText"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_above="@+id/rvWeather"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvWeather"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="80dp"/>

    </RelativeLayout>

</RelativeLayout>